--- a/boot.img-ramdisk/res/recovery/init.rc
+++ b/boot.img-ramdisk/res/recovery/init.rc
@@ -5,7 +5,7 @@ on early-init
     start healthd
 
 on init
-    export PATH /sbin:/system/bin
+    export PATH /sbin
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
@@ -23,7 +23,8 @@ on init
     mkdir /system
     mkdir /data
     mkdir /cache
-    mount tmpfs tmpfs /tmp
+    mkdir /usbdisk
+    mount /tmp /tmp tmpfs
 
     chown root shell /tmp
     chmod 0775 /tmp
@@ -49,24 +50,19 @@ on init
     mount tmpfs tmpfs /mnt/fuse mode=0775,gid=1000
 
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor 18D1
-    write /sys/class/android_usb/android0/idProduct D001
+    write /sys/class/android_usb/android0/idVendor 04e8
+    write /sys/class/android_usb/android0/idProduct 6860
     write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
 
-
 on boot
-
     ifup lo
     hostname localhost
     domainname localdomain
 
     class_start default
-
-on property:sys.powerctl=*
-    powerctl ${sys.powerctl}
 
 service ueventd /sbin/ueventd
     critical
@@ -95,12 +91,10 @@ on property:service.adb.root=1
 
 on property:sys.storage.ums_enabled=1
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idProduct D003
     write /sys/class/android_usb/android0/functions mass_storage,adb
     write /sys/class/android_usb/android0/enable 1
 
 on property:sys.storage.ums_enabled=0
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idProduct D001
     write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/enable ${service.adb.root}
