--- a/boot.img-ramdisk/res/aosp44/init.target.rc
+++ b/boot.img-ramdisk/res/aosp44/init.target.rc
@@ -451,6 +451,10 @@ service thermald /system/bin/thermald
     user root
     group root
 
+service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+    user root
+    disabled
+
 service qrngd /system/bin/qrngd -f
     class main
     user root
